<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="@dimen/padding_large"
    tools:context=".ui.location.LocationDetailFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/padding_large">
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/map_height"
        android:layout_marginBottom="@dimen/margin_small"/>

    <EditText
        android:id="@+id/text_location_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location_name"
        android:layout_marginBottom="@dimen/margin_small"/>

    <EditText
        android:id="@+id/text_location_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location_address"
        android:layout_marginBottom="@dimen/margin_small"/>

    <EditText
        android:id="@+id/text_location_latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/latitude"
        android:inputType="numberDecimal"
        android:layout_marginBottom="@dimen/margin_small"/>

    <EditText
        android:id="@+id/text_location_longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/longitude"
        android:inputType="numberDecimal"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/button_location_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />
    </LinearLayout>
    </ScrollView>
</LinearLayout>